--- a/monitoring/prometheus.yaml
+++ b/monitoring/prometheus.yaml
@@ -1,4 +1,3 @@
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -33,7 +32,6 @@ subjects:
 - kind: ServiceAccount
   name: default
   namespace: monitoring
-
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -54,6 +52,16 @@ data:
           severity: slack
         annotations:
           summary: High Memory Usage
+    - name: devopscube HighCPUUsage alert
+      rules:
+      - alert: HighCPUUsage
+        expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[1m])) * 100) > 5
+        for: 1m
+        labels:
+          severity: slack
+        annotations:
+          summary: High CPU usage detected
+          description: CPU usage on {{ $labels.instance }} is above 5%
   prometheus.yml: |-
     global:
       scrape_interval: 5s
@@ -65,7 +73,7 @@ data:
       - scheme: http
         static_configs:
         - targets:
-          - "alertmanager.monitoring.svc:9093"
+          - "alertmanager:9093"
 
     scrape_configs:
       - job_name: 'node-exporter'
@@ -110,7 +118,7 @@ data:
           target_label: __metrics_path__
           replacement: /api/v1/nodes/${1}/proxy/metrics
 
-      
+
       - job_name: 'kubernetes-pods'
 
         kubernetes_sd_configs:
@@ -137,7 +145,7 @@ data:
         - source_labels: [__meta_kubernetes_pod_name]
           action: replace
           target_label: kubernetes_pod_name
-      
+
       - job_name: 'kube-state-metrics'
         static_configs:
           - targets: ['kube-state-metrics.monitoring.svc.cluster.local:8080']
@@ -162,7 +170,7 @@ data:
           regex: (.+)
           target_label: __metrics_path__
           replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
-      
+
       - job_name: 'kubernetes-service-endpoints'
 
         kubernetes_sd_configs:
@@ -229,7 +237,7 @@ spec:
           configMap:
             defaultMode: 420
             name: prometheus-server-conf
-  
+
         - name: prometheus-storage-volume
           emptyDir: {}
 ---
@@ -242,12 +250,12 @@ metadata:
       prometheus.io/scrape: 'true'
       prometheus.io/port:   '9090'
 spec:
-  selector: 
+  selector:
     app: prometheus-server
-  type: NodePort  
+  type: NodePort
   ports:
     - port: 8080
-      targetPort: 9090 
+      targetPort: 9090
       nodePort: 30003
 ---
 apiVersion: networking.k8s.io/v1
